AG-3606 - prevent date input overflowing container in Chrome

--- a/community-modules/core/src/styles/ag-grid.scss
+++ b/community-modules/core/src/styles/ag-grid.scss
@@ -1330,6 +1330,12 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     flex: 1 1 auto;
     width: 100%;
     min-width: 0;
+
+    &[type='date'] {
+        // Fix a bug in Blink rendering engine where date input will not shrink from its default size in a
+        // flex container, but it will grow. So we give it a very small width and it will grow to the right size
+        width: 1px;
+    }
 }
 
 .ag-range-field {
